# joy_manager_ros2

./: AXIS_REMAPPING.md  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: dualshock_ps4.lanch.py  dualshock_ps4.launch.py  joystick_radiomaster_pocket.launch.py  joystick_radiomaster_pocket_bl.launch.py
src/: dualshock_ps4.cpp  joystick_radiomaster_pocket.cpp  joystick_radiomaster_pocket_bl.cpp  mix_mode_button.cpp
srv/: SwitchCommand.srv
test/: test_client_radiopocket.py
